--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -23,3 +23,15 @@
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
 }
+
+.navbar .navbar__logo {
+  display: none;
+}
+.navbar .navbar__brand {
+  display: block;
+  height: auto;
+}
+.navbar .navbar__title {
+  font-size: 1.25rem;
+  line-height: 1;
+}
